add supplementary material + V2 of fig 1 + some minor change in graph

--- a/figure_papier/table_iptw.tex
+++ b/figure_papier/table_iptw.tex
@@ -9,12 +9,12 @@
 \toprule
 Adherence group & Mean & Minimum & Maximum\\
 \midrule
-\cellcolor{gray!6}{0-4 h} & \cellcolor{gray!6}{4.7(4.5; 4.8)} & \cellcolor{gray!6}{1.2(1.1; 1.4)} & \cellcolor{gray!6}{24.2(18.7; 31.2)}\\
-4-6 h & 2.6(2.6; 2.7) & 1.7(1.3; 1.8) & 7.9(5.9; 10.6)\\
-\cellcolor{gray!6}{6-7 h} & \cellcolor{gray!6}{4.6(4.4; 4.7)} & \cellcolor{gray!6}{1.8(1.1; 2.4)} & \cellcolor{gray!6}{29.0(16.2; 42.1)}\\
-7-10 h & 5.4(5.2; 5.7) & 1.9(1.2; 2.3) & 47.7(24.3; 80.7)\\
+\cellcolor{gray!6}{0-4 h} & \cellcolor{gray!6}{4.7(4.5; 4.9)} & \cellcolor{gray!6}{1.2(1.1; 1.4)} & \cellcolor{gray!6}{24.5(18.1; 34.0)}\\
+4-6 h & 2.6(2.6; 2.7) & 1.7(1.2; 1.9) & 7.9(5.7; 11.6)\\
+\cellcolor{gray!6}{6-7 h} & \cellcolor{gray!6}{4.6(4.4; 4.8)} & \cellcolor{gray!6}{1.8(1.0; 2.5)} & \cellcolor{gray!6}{29.4(15.4; 47.3)}\\
+7-10 h & 5.4(5.2; 5.7) & 1.9(1.1; 2.4) & 47.0(23.1; 82.6)\\
 \bottomrule
-\multicolumn{4}{l}{\textsuperscript{*} Number are express in mean (5th percentile; 95th percentile) of bootstrap iterations}\\
+\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean (5th percentile; 95th percentile) of bootstrap iterations}\\
 \end{tabular}}
 \end{table}
 \clearpage
@@ -27,14 +27,14 @@ Adherence group & Mean & Minimum & Maximum\\
 \toprule
 Truncations & Mean & Minimum & Maximum\\
 \midrule
-\cellcolor{gray!6}{(0; 1)} & \cellcolor{gray!6}{4.0(4.0; 4.0)} & \cellcolor{gray!6}{1.2(1.0; 1.3)} & \cellcolor{gray!6}{48.8(27.9; 81.0)}\\
-(0.01; 0.99) & 4.0(4.0; 4.0) & 1.9(1.8; 1.9) & 11.8(11.0; 12.6)\\
+\cellcolor{gray!6}{(0; 1)} & \cellcolor{gray!6}{4.0(4.0; 4.0)} & \cellcolor{gray!6}{1.2(1.0; 1.3)} & \cellcolor{gray!6}{48.2(29.9; 75.0)}\\
+(0.01; 0.99) & 4.0(4.0; 4.0) & 1.9(1.8; 1.9) & 11.8(11.1; 12.6)\\
 \cellcolor{gray!6}{(0.05; 0.95)} & \cellcolor{gray!6}{3.9(3.9; 3.9)} & \cellcolor{gray!6}{2.1(2.1; 2.2)} & \cellcolor{gray!6}{7.8(7.5; 8.0)}\\
-(0.1; 0.9) & 3.8(3.8; 3.8) & 2.3(2.2; 2.3) & 6.4(6.2; 6.5)\\
+(0.1; 0.9) & 3.8(3.8; 3.8) & 2.3(2.2; 2.3) & 6.4(6.3; 6.5)\\
 \cellcolor{gray!6}{(0.25; 0.75)} & \cellcolor{gray!6}{3.6(3.6; 3.6)} & \cellcolor{gray!6}{2.6(2.5; 2.7)} & \cellcolor{gray!6}{4.7(4.7; 4.8)}\\
 (0.5; 0.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5)\\
 \bottomrule
-\multicolumn{4}{l}{\textsuperscript{*} Number are express in mean ( 5th percentile; 95th percentile) of bootstrap iterations}\\
+\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean ( 5th percentile; 95th percentile) of bootstrap iterations}\\
 \end{tabular}}
 \end{table}
 \clearpage
@@ -53,11 +53,11 @@ Truncations & Mean & Minimum & Maximum\\
 \midrule
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{Variables at diagnosis }}\\
-\cellcolor{gray!6}{\hspace{1em}Epworth sleepiness scale} & \cellcolor{gray!6}{10.9 (5.2)\textsubscript{}} & \cellcolor{gray!6}{10.9 (5.3)\textsubscript{}} & \cellcolor{gray!6}{11.0 (5.2)\textsubscript{}} & \cellcolor{gray!6}{10.7 (5.1)\textsubscript{}} & \cellcolor{gray!6}{10.7 (5.2)\textsubscript{}}\\
-\hspace{1em}Gender & 6,492 (70.2\%)\textsubscript{} & 1,339 (67.7\%)\textsubscript{3} & 2,504 (71.2\%)\textsubscript{} & 1,461 (72.2\%)\textsubscript{1} & 1,188 (68.9\%)\textsubscript{}\\
+\cellcolor{gray!6}{\hspace{1em}ESS score} & \cellcolor{gray!6}{10.9 (5.2)\textsubscript{}} & \cellcolor{gray!6}{10.9 (5.3)\textsubscript{}} & \cellcolor{gray!6}{11.0 (5.2)\textsubscript{}} & \cellcolor{gray!6}{10.7 (5.1)\textsubscript{}} & \cellcolor{gray!6}{10.7 (5.2)\textsubscript{}}\\
+\hspace{1em}Gender (male) & 6,492 (70.2\%)\textsubscript{} & 1,339 (67.7\%)\textsubscript{3} & 2,504 (71.2\%)\textsubscript{} & 1,461 (72.2\%)\textsubscript{1} & 1,188 (68.9\%)\textsubscript{}\\
 \cellcolor{gray!6}{\hspace{1em}Age (years)} & \cellcolor{gray!6}{57.2 (12.4)\textsubscript{1,3,4}} & \cellcolor{gray!6}{55.6 (12.6)\textsubscript{2,3,4}} & \cellcolor{gray!6}{56.6 (12.2)\textsubscript{1,3,4}} & \cellcolor{gray!6}{58.1 (11.9)\textsubscript{1,2,4}} & \cellcolor{gray!6}{59.4 (12.4)\textsubscript{1,2,3}}\\
 \hspace{1em}Body mass index (kg/m2) & 31.9 (6.9)\textsubscript{4} & 31.7 (6.7)\textsubscript{4} & 31.7 (6.8)\textsubscript{4} & 32.0 (7.2)\textsubscript{} & 32.5 (6.8)\textsubscript{1,2}\\
-\cellcolor{gray!6}{\hspace{1em}Apnea hypopnea index} & \cellcolor{gray!6}{40.7 (20.4)\textsubscript{1,3,4}} & \cellcolor{gray!6}{37.7 (19.6)\textsubscript{2,3,4}} & \cellcolor{gray!6}{39.7 (19.6)\textsubscript{1,3,4}} & \cellcolor{gray!6}{42.7 (21.2)\textsubscript{1,2}} & \cellcolor{gray!6}{43.8 (21.5)\textsubscript{1,2}}\\
+\cellcolor{gray!6}{\hspace{1em}Apnea hypopnea index (event/h)} & \cellcolor{gray!6}{40.7 (20.4)\textsubscript{1,3,4}} & \cellcolor{gray!6}{37.7 (19.6)\textsubscript{2,3,4}} & \cellcolor{gray!6}{39.7 (19.6)\textsubscript{1,3,4}} & \cellcolor{gray!6}{42.7 (21.2)\textsubscript{1,2}} & \cellcolor{gray!6}{43.8 (21.5)\textsubscript{1,2}}\\
 \hspace{1em}Tobacco status & 0.6 (0.7)\textsubscript{} & 0.6 (0.8)\textsubscript{4} & 0.6 (0.7)\textsubscript{} & 0.6 (0.7)\textsubscript{} & 0.5 (0.7)\textsubscript{1}\\
 \cellcolor{gray!6}{\hspace{1em}Depression scale} & \cellcolor{gray!6}{4.0 (3.8)\textsubscript{}} & \cellcolor{gray!6}{4.2 (3.9)\textsubscript{3}} & \cellcolor{gray!6}{4.0 (3.8)\textsubscript{}} & \cellcolor{gray!6}{3.8 (3.7)\textsubscript{1}} & \cellcolor{gray!6}{4.0 (3.8)\textsubscript{}}\\
 \hspace{1em}Pichot's fatigue scale & 13.2 (8.2)\textsubscript{} & 13.7 (8.5)\textsubscript{} & 13.1 (8.2)\textsubscript{} & 13.0 (8.1)\textsubscript{} & 13.4 (8.1)\textsubscript{}\\
@@ -66,7 +66,7 @@ Truncations & Mean & Minimum & Maximum\\
 \cellcolor{gray!6}{\hspace{1em}Diabetes} & \cellcolor{gray!6}{2,485 (26.9\%)\textsubscript{}} & \cellcolor{gray!6}{560 (28.3\%)\textsubscript{}} & \cellcolor{gray!6}{905 (25.7\%)\textsubscript{}} & \cellcolor{gray!6}{516 (25.5\%)\textsubscript{}} & \cellcolor{gray!6}{504 (29.2\%)\textsubscript{}}\\
 \addlinespace[0.3em]
 \multicolumn{6}{l}{\textbf{Variables at follow-up}}\\
-\hspace{1em}Epworth sleepiness scale & 6.3 (4.3)\textsubscript{1,3,4} & 7.5 (4.7)\textsubscript{2,3,4} & 6.4 (4.2)\textsubscript{1,3,4} & 5.7 (3.9)\textsubscript{1,2} & 5.5 (4.0)\textsubscript{1,2}\\
+\hspace{1em}ESS score & 6.3 (4.3)\textsubscript{1,3,4} & 7.5 (4.7)\textsubscript{2,3,4} & 6.4 (4.2)\textsubscript{1,3,4} & 5.7 (3.9)\textsubscript{1,2} & 5.5 (4.0)\textsubscript{1,2}\\
 \cellcolor{gray!6}{\hspace{1em}Residual apnea  hypopnea index under CPAP} & \cellcolor{gray!6}{4.0 (4.6)\textsubscript{1}} & \cellcolor{gray!6}{4.5 (5.3)\textsubscript{2,3}} & \cellcolor{gray!6}{3.9 (4.0)\textsubscript{1}} & \cellcolor{gray!6}{3.9 (4.3)\textsubscript{1}} & \cellcolor{gray!6}{4.1 (5.0)\textsubscript{}}\\
 \hspace{1em}Pichot's fatigue scale & 7.6 (7.2)\textsubscript{1,3} & 9.3 (7.7)\textsubscript{2,3,4} & 7.4 (7.0)\textsubscript{1,3} & 6.6 (6.6)\textsubscript{1,2,4} & 7.2 (7.4)\textsubscript{1,3}\\
 \cellcolor{gray!6}{\hspace{1em}Morning headaches} & \cellcolor{gray!6}{2,533 (27.4\%)\textsubscript{4}} & \cellcolor{gray!6}{600 (30.3\%)\textsubscript{4}} & \cellcolor{gray!6}{1,006 (28.6\%)\textsubscript{4}} & \cellcolor{gray!6}{535 (26.4\%)\textsubscript{}} & \cellcolor{gray!6}{392 (22.7\%)\textsubscript{1,2}}\\
@@ -77,11 +77,12 @@ Truncations & Mean & Minimum & Maximum\\
 \end{tabular}
 \begin{tablenotes}
 \small
-\item [*] Quantitative variables are expressed in mean (standard deviation). Qualitative variables are expressed in number of individuals (\% of individuals) 
+\item [*] Quantitative variables are presented as mean (standard deviation). Qualitative variables are expressed in number of individuals (\% of individuals) 
 \item [\dag] t-test was performed for the quantitative variables and a Pearson's Chi squared test for the categorical variables after application of a Bonferroni correction for multiple testing.
 \item [\ddag] 1,2,3,4 numbers in subscript refers to columns statistically different at the 5\% threshold. e.g. 1 means that there is a statistically significant difference between the 0-4h adherence group and the 0-4h adherence group (1) for the variable in question.
-\item [\S] CPAP : Continuous Positive Airway Pressure
-\item [\P] ADR : adverse drug reaction
+\item [\S] ESS : Epworth Sleepiness Scale
+\item [\P] CPAP : Continuous Positive Airway Pressure
+\item [**] ADR : adverse drug reaction
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
