--- a/figure_papier/matsup.tex
+++ b/figure_papier/matsup.tex
@@ -1,5 +1,62 @@
-\documentclass[../matsup.tex]{subfiles}
+
+\documentclass{article}
+\usepackage[utf8]{inputenc}
+\usepackage{float}
+\usepackage{gensymb}
+\usepackage{graphicx}
+\usepackage{lscape}
+\usepackage{longtable}
+\usepackage{booktabs}
+\usepackage{colortbl, xcolor}
+\usepackage{hyperref}
+\usepackage{subfiles}
+\usepackage{setspace}
+\usepackage{sectsty}
+\usepackage{geometry}
+\usepackage{indentfirst}
+\usepackage{amsmath,lipsum}
+\newcommand{\mypm}{\mathbin{\smash{%
+  \raisebox{0.35ex}{%
+    $\underset{\raisebox{0.2ex}{$\smash -$}}{\smash+}$%
+  }%
+}%
+}%
+}
+
+\usepackage{threeparttablex}
+\usepackage{caption}                          
+\DeclareCaptionLabelFormat{Sformat}{S#2 #1}    
+\captionsetup[table]{labelformat=Sformat} 
+
+
+
+\usepackage[superscript,biblabel]{cite}
+\sectionfont{\clearpage}
+\doublespacing 
+
+\title{Causal inference with multiple exposures: application of inverse-probability-of-treatment weighting to estimate the effect of daytime sleepiness in obstructive sleep apnea patients. \\
+  Supplementary Material}
+
+\author{}
+\date{}
+
 \begin{document}
+
+\maketitle
+
+\subsection*{Author}
+François Bettega\textsuperscript{1}, Clémence Leyrat\textsuperscript{2}, Monique Mendelson\textsuperscript{1}, Jean Louis Pépin\textsuperscript{1}, Sébastien Bailly\textsuperscript{1}
+\subsection*{Affiliations}
+\textsuperscript{1} HP2 Laboratory, INSERM U1042, University Grenoble Alpes, Grenoble, France 
+
+\textsuperscript{2} Department of Medical Statistics, Inequalities in Cancer Outcomes Network, London School of Hygiene and Tropical Medicine, London, UK
+
+
+\clearpage
+\section*{Supplementary material 1 : Imputation}
+Variables contained at least one missing which needed to be imputed, table \ref{tab:Table_number_of_na} summarized number of missing values by adherence group for each of those variables.
+
+We performed 10 imputed data sets using predictive mean matching as imputation method. After that we verified that the 10 imputed data sets were consistent with each other by looking at the distributions of the imputed variables in the different data sets.
 \newgeometry{a4paper,left=1in,right=1in,top=1in,bottom=1in,nohead}
 
 \begin{landscape}\begin{table}[H]
@@ -47,23 +104,35 @@
 \end{landscape}
 \restoregeometry % Restore the global document page margins
 \clearpage
-\begingroup\fontsize{7}{9}\selectfont
+\begin{table}[H]
 
-\begin{longtable}[t]{cccc}
-\caption{\label{tab:Wheight_coefficients}Wheight coefficients}\\
+\caption{\label{tab:weight_truncations}Weight truncations}
+\centering
+\resizebox{\linewidth}{!}{
+\begin{tabular}[t]{cccc}
 \toprule
-Variables & Coeficients of 4-6 h group & Coeficients of 6-7 h group & Coeficients of 7-10 h group\\
+Truncations & Mean & Minimum & Maximum\\
 \midrule
-\endfirsthead
-\caption[]{Wheight coefficients \textit{(continued)}}\\
-\toprule
-Variables & Coeficients of 4-6 h group & Coeficients of 6-7 h group & Coeficients of 7-10 h group\\
-\midrule
-\endhead
-
-\endfoot
+\cellcolor{gray!6}{(0; 1)} & \cellcolor{gray!6}{4.0(4.0; 4.0)} & \cellcolor{gray!6}{1.2(1.0; 1.3)} & \cellcolor{gray!6}{48.2(29.9; 75.0)}\\
+(0.01; 0.99) & 4.0(4.0; 4.0) & 1.9(1.8; 1.9) & 11.8(11.1; 12.6)\\
+\cellcolor{gray!6}{(0.05; 0.95)} & \cellcolor{gray!6}{3.9(3.9; 3.9)} & \cellcolor{gray!6}{2.1(2.1; 2.2)} & \cellcolor{gray!6}{7.8(7.5; 8.0)}\\
+(0.1; 0.9) & 3.8(3.8; 3.8) & 2.3(2.2; 2.3) & 6.4(6.3; 6.5)\\
+\cellcolor{gray!6}{(0.25; 0.75)} & \cellcolor{gray!6}{3.6(3.6; 3.6)} & \cellcolor{gray!6}{2.6(2.5; 2.7)} & \cellcolor{gray!6}{4.7(4.7; 4.8)}\\
+(0.5; 0.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5)\\
 \bottomrule
-\endlastfoot
+\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
+\end{tabular}}
+\end{table}
+\clearpage
+\begin{table}[H]
+
+\caption{\label{tab:Wheight_coefficients}Table caption \label{tab:example}}
+\centering
+\fontsize{7}{9}\selectfont
+\begin{tabular}[t]{cccc}
+\toprule
+Variables & Coeficients of 4-6 h group & Coeficients of 6-7 h group & Coeficients of 7-10 h group\\
+\midrule
 \cellcolor{gray!6}{Diagnosis age (years)} & \cellcolor{gray!6}{0.011(0.006; 0.016)} & \cellcolor{gray!6}{0.022(0.017; 0.028)} & \cellcolor{gray!6}{0.029(0.023; 0.035)}\\
 Diagnosis body mass index (kg/m2) & -0.003(-0.014; 0.007) & -0.007(-0.020; 0.005) & -0.002(-0.013; 0.009)\\
 \cellcolor{gray!6}{Diagnosis cervical circumference} & \cellcolor{gray!6}{0.003(-0.014; 0.021)} & \cellcolor{gray!6}{0.024(0.005; 0.044)} & \cellcolor{gray!6}{0.027(0.008; 0.048)}\\
@@ -91,11 +160,13 @@ Libido disorder & 0.276(0.105; 0.440) & 0.202(0.016; 0.397) & 0.353(0.143; 0.556
 \cellcolor{gray!6}{Night sweating} & \cellcolor{gray!6}{-0.051(-0.203; 0.111)} & \cellcolor{gray!6}{-0.104(-0.285; 0.062)} & \cellcolor{gray!6}{-0.234(-0.437; -0.051)}\\
 Pichot's fatigue scale & -0.034(-0.044; -0.024) & -0.057(-0.070; -0.045) & -0.037(-0.049; -0.025)\\
 \cellcolor{gray!6}{Average pressure of CPAP} & \cellcolor{gray!6}{0.055(0.030; 0.081)} & \cellcolor{gray!6}{0.076(0.048; 0.105)} & \cellcolor{gray!6}{0.116(0.085; 0.144)}\\
-Number of ADR types under CPAP & -0.263(-0.312; -0.215) & -0.343(-0.404; -0.276) & -0.374(-0.447; -0.307)\\*
-\end{longtable}
-\endgroup{}
+Number of ADR types under CPAP & -0.263(-0.312; -0.215) & -0.343(-0.404; -0.276) & -0.374(-0.447; -0.307)\\
+\bottomrule
+\multicolumn{4}{l}{\textsuperscript{1} Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
+\end{tabular}
+\end{table}
 \clearpage
-\begingroup\fontsize{7}{9}\selectfont
+\begingroup\fontsize{6}{8}\selectfont
 
 \begin{longtable}[t]{cc}
 \caption{\label{tab:IPWRA_coefficients}IPWRA coefficients}\\
@@ -111,6 +182,7 @@ Label & Model coefficients\\
 
 \endfoot
 \bottomrule
+\multicolumn{2}{l}{\rule{0pt}{1em}\textsuperscript{*} Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
 \endlastfoot
 \cellcolor{gray!6}{Diagnosis age (years)} & \cellcolor{gray!6}{-0.022(-0.029; -0.016)}\\
 Diagnosis body mass index (kg/m2) & -0.022(-0.035; -0.010)\\
