--- a/figure_papier/table_iptw.tex
+++ b/figure_papier/table_iptw.tex
@@ -14,27 +14,7 @@ Adherence group & Mean & Minimum & Maximum\\
 \cellcolor{gray!6}{6-7 h} & \cellcolor{gray!6}{4.6(4.4; 4.8)} & \cellcolor{gray!6}{1.8(1.0; 2.5)} & \cellcolor{gray!6}{29.4(15.4; 47.3)}\\
 7-10 h & 5.4(5.2; 5.7) & 1.9(1.1; 2.4) & 47.0(23.1; 82.6)\\
 \bottomrule
-\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean (5th percentile; 95th percentile) of bootstrap iterations}\\
-\end{tabular}}
-\end{table}
-\clearpage
-\begin{table}[H]
-
-\caption{\label{tab:weight_truncations}Weight truncations}
-\centering
-\resizebox{\linewidth}{!}{
-\begin{tabular}[t]{cccc}
-\toprule
-Truncations & Mean & Minimum & Maximum\\
-\midrule
-\cellcolor{gray!6}{(0; 1)} & \cellcolor{gray!6}{4.0(4.0; 4.0)} & \cellcolor{gray!6}{1.2(1.0; 1.3)} & \cellcolor{gray!6}{48.2(29.9; 75.0)}\\
-(0.01; 0.99) & 4.0(4.0; 4.0) & 1.9(1.8; 1.9) & 11.8(11.1; 12.6)\\
-\cellcolor{gray!6}{(0.05; 0.95)} & \cellcolor{gray!6}{3.9(3.9; 3.9)} & \cellcolor{gray!6}{2.1(2.1; 2.2)} & \cellcolor{gray!6}{7.8(7.5; 8.0)}\\
-(0.1; 0.9) & 3.8(3.8; 3.8) & 2.3(2.2; 2.3) & 6.4(6.3; 6.5)\\
-\cellcolor{gray!6}{(0.25; 0.75)} & \cellcolor{gray!6}{3.6(3.6; 3.6)} & \cellcolor{gray!6}{2.6(2.5; 2.7)} & \cellcolor{gray!6}{4.7(4.7; 4.8)}\\
-(0.5; 0.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5) & 3.4(3.4; 3.5)\\
-\bottomrule
-\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean ( 5th percentile; 95th percentile) of bootstrap iterations}\\
+\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
 \end{tabular}}
 \end{table}
 \clearpage
