--- a/figure_papier/table_iptw.tex
+++ b/figure_papier/table_iptw.tex
@@ -14,7 +14,7 @@ Adherence group & Mean & Minimum & Maximum\\
 \cellcolor{gray!6}{6-7 h} & \cellcolor{gray!6}{4.6(4.4; 4.8)} & \cellcolor{gray!6}{1.8(1.0; 2.5)} & \cellcolor{gray!6}{29.4(15.4; 47.3)}\\
 7-10 h & 5.4(5.2; 5.7) & 1.9(1.1; 2.4) & 47.0(23.1; 82.6)\\
 \bottomrule
-\multicolumn{4}{l}{\textsuperscript{*} Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
+\multicolumn{4}{l}{\rule{0pt}{1em}Data are presented as mean (95\% confidence interval) of bootstrap iterations}\\
 \end{tabular}}
 \end{table}
 \clearpage
@@ -23,9 +23,9 @@ Adherence group & Mean & Minimum & Maximum\\
 
 \begin{landscape}\begin{table}[H]
 
-\begin{threeparttable}
-\caption{\label{tab:Table_resume_pop}Table of variables for each adherence group}
+\caption{\label{tab:Table_resume_pop}Patient characteristics according to the adherence group}
 \centering
+\begin{threeparttable}
 \begin{tabular}[t]{cccccc}
 \toprule
 \multicolumn{1}{c}{} & \multicolumn{1}{c}{All groups} & \multicolumn{1}{c}{0-4 h (1)} & \multicolumn{1}{c}{4-6 h (2)} & \multicolumn{1}{c}{6-7 h (3)} & \multicolumn{1}{c}{7-10 h (4)} \\
@@ -56,13 +56,10 @@ Adherence group & Mean & Minimum & Maximum\\
 \bottomrule
 \end{tabular}
 \begin{tablenotes}
-\small
-\item [*] Quantitative variables are presented as mean (standard deviation). Qualitative variables are expressed in number of individuals (\% of individuals) 
-\item [\dag] t-test was performed for the quantitative variables and a Pearson's Chi squared test for the categorical variables after application of a Bonferroni correction for multiple testing.
-\item [\ddag] 1,2,3,4 numbers in subscript refers to columns statistically different at the 5\% threshold. e.g. 1 means that there is a statistically significant difference between the 0-4h adherence group and the 0-4h adherence group (1) for the variable in question.
-\item [\S] ESS : Epworth Sleepiness Scale
-\item [\P] CPAP : Continuous Positive Airway Pressure
-\item [**] ADR : adverse drug reaction
+\item ESS : Epworth Sleepiness Scale; CPAP : Continuous Positive Airway Pressure; ADR : adverse drug reaction
+\item[*] Quantitative variables are presented as mean (standard deviation). Qualitative variables are expressed in number of individuals (\% of individuals) 
+\item[\dag] t-test was performed for the quantitative variables and a Pearson's Chi squared test for the categorical variables after application of a Bonferroni correction for multiple testing.
+\item[\ddag] 1,2,3,4 numbers in subscript refers to columns statistically different at the 5\% threshold. e.g. 1 means that there is a statistically significant difference between the 0-4h adherence group and the 0-4h adherence group (1) for the variable in question.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
